--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -11,16 +11,16 @@ collections:
     folder: "content/blog"
     create: true
     slug: "index"
-    media_folder: "static/img"
+    media_folder: ""
     public_folder: ""
     path: "{{title}}/index"
     editor:
       preview: true
     fields:
       - { label: "Title", name: "title", widget: "string", required: true }
-      - { label: "Description", name: "description", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime", required: true}
       - { label: "Estimated Read Time", name: "readtime", widget: "number", required: true}
+      - { label: "Description", name: "description", widget: "string" }
       - { label: "Thumbnail Image", name: "thumbnail", widget: "image", required: true }
       - { label: "Body", name: "body", widget: "markdown", required: true }
 
