--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -50,11 +50,12 @@ collections:
         file: site/settings/contact_info.json
         fields:
           - { label: "Phone", name: "phone", widget: "string" }
-          - { label: "Email", name: "email", widget: "string", required: false } #remove required after testing
+          - { label: "Phone (toll free)", name: "phone2", widget: "string", required: false}
+          - { label: "Email", name: "email", widget: "string" }
           - label: "Address"
             name: "address"
             widget: "object"
             fields:
               - { label: Street, name: street, widget: string }
               - { label: Street2, name: street2, widget: string, required: false}
-              - { label: City, name: city, widget: string } 
+              - { label: City, name: city, widget: string, required: false } 
