--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
+    "react-mailchimp-subscribe": "^2.1.3",
     "styled-components": "^5.3.0",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75"
