--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prismjs": "^1.23.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-headroom": "^3.1.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-mailchimp-subscribe": "^2.1.3",
