--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-headroom": "^3.1.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
+    "react-intersection-observer": "^8.32.0",
     "react-mailchimp-subscribe": "^2.1.3",
     "styled-components": "^5.3.0",
     "typeface-merriweather": "0.0.72",
