--- a/package.json
+++ b/package.json
@@ -8,45 +8,46 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
-    "babel-plugin-styled-components": "^1.13.2",
-    "embla-carousel": "^4.5.3",
-    "framer-motion": "^4.1.17",
-    "gatsby": "^3.10.2",
-    "gatsby-plugin-feed": "^3.6.0",
-    "gatsby-plugin-gatsby-cloud": "^2.6.1",
-    "gatsby-plugin-google-analytics": "^3.6.0",
-    "gatsby-plugin-image": "^1.6.0",
-    "gatsby-plugin-manifest": "^3.6.0",
-    "gatsby-plugin-netlify-cms": "^5.8.0",
-    "gatsby-plugin-offline": "^4.6.0",
-    "gatsby-plugin-react-helmet": "^4.6.0",
-    "gatsby-plugin-sharp": "^3.6.0",
-    "gatsby-plugin-styled-components": "^4.10.0",
-    "gatsby-remark-copy-linked-files": "^3.2.0",
-    "gatsby-remark-images": "^4.2.0",
-    "gatsby-remark-prismjs": "^4.2.0",
+    "babel-plugin-styled-components": "^1.13.3",
+    "embla-carousel": "^6.0.1",
+    "embla-carousel-react": "^6.0.1",
+    "framer-motion": "^5.3.0",
+    "gatsby": "^4.2.0",
+    "gatsby-plugin-feed": "^4.2.0",
+    "gatsby-plugin-gatsby-cloud": "^4.2.0",
+    "gatsby-plugin-google-analytics": "^4.2.0",
+    "gatsby-plugin-image": "^2.2.0",
+    "gatsby-plugin-manifest": "^4.2.0",
+    "gatsby-plugin-netlify-cms": "^6.2.0",
+    "gatsby-plugin-offline": "^5.2.0",
+    "gatsby-plugin-react-helmet": "^5.2.0",
+    "gatsby-plugin-sharp": "^4.2.0",
+    "gatsby-plugin-styled-components": "^5.2.0",
+    "gatsby-remark-copy-linked-files": "^5.2.0",
+    "gatsby-remark-images": "^6.2.0",
+    "gatsby-remark-prismjs": "^6.2.0",
     "gatsby-remark-relative-images": "^2.0.2",
-    "gatsby-remark-responsive-iframe": "^3.2.0",
-    "gatsby-remark-smartypants": "^3.2.0",
-    "gatsby-source-filesystem": "^3.6.0",
-    "gatsby-transformer-remark": "^3.2.0",
-    "gatsby-transformer-sharp": "^3.6.0",
+    "gatsby-remark-responsive-iframe": "^5.2.0",
+    "gatsby-remark-smartypants": "^5.2.0",
+    "gatsby-source-filesystem": "^4.2.0",
+    "gatsby-transformer-remark": "^5.2.0",
+    "gatsby-transformer-sharp": "^4.2.0",
     "hamburger-react": "^2.4.1",
-    "netlify-cms-app": "^2.15.20",
-    "prismjs": "^1.23.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-headroom": "^3.1.1",
+    "netlify-cms-app": "^2.15.59",
+    "prismjs": "^1.25.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-headroom": "^3.2.0",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.2.0",
-    "react-intersection-observer": "^8.32.0",
+    "react-icons": "^4.3.1",
+    "react-intersection-observer": "^8.32.2",
     "react-mailchimp-subscribe": "^2.1.3",
-    "styled-components": "^5.3.0",
-    "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.75"
+    "styled-components": "^5.3.3",
+    "typeface-merriweather": "1.1.13",
+    "typeface-montserrat": "1.1.13"
   },
   "devDependencies": {
-    "prettier": "2.2.1"
+    "prettier": "2.4.1"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
