--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -50,7 +50,7 @@ collections:
     slug: "facultyLeadership"
     media_folder: ""
     public_folder: ""
-    path: "{{name}}/index"
+    path: "{{title}}/index"
     editor:
       preview: true
     fields:
@@ -69,7 +69,7 @@ collections:
     slug: "facultyInstructor"
     media_folder: ""
     public_folder: ""
-    path: "{{name}}/index"
+    path: "{{title}}/index"
     editor:
       preview: true
     fields:
