--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -57,7 +57,7 @@ collections:
       - { label: "Title", name: "title", widget: "string", required: true  }
       - { label: "Role", name: "role", widget: "string", required: true }
       - { label: "Portrait", name: "portrait", widget: "image", required: true }
-      - { label: "Brief Description", name: "description", widget: "string", required: true }
+      # - { label: "Brief Description (160 char limit)", name: "description", widget: "string", required: true }
       - { label: "Bio", name: "body", widget: "markdown", required: true }
       - { label: "Email Address", name: "email", widget: "string", required: true }
 
@@ -76,7 +76,7 @@ collections:
       - { label: "Title", name: "title", widget: "string", required: true  }
       - { label: "Role", name: "role", widget: "string", required: true, default: "Instructor" }
       - { label: "Portrait", name: "portrait", widget: "image", required: true }
-      - { label: "Brief Description", name: "description", widget: "string", required: true }
+      # - { label: "Brief Description (160 char limit)", name: "description", widget: "string", required: true }
       - { label: "Bio", name: "body", widget: "markdown", required: true }
       - { label: "Email Address", name: "email", widget: "string", required: true }
 
