--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-feed": "^4.2.0",
     "gatsby-plugin-gatsby-cloud": "^4.2.0",
     "gatsby-plugin-google-analytics": "^4.2.0",
+    "gatsby-plugin-google-tagmanager": "^4.3.0",
     "gatsby-plugin-image": "^2.2.0",
     "gatsby-plugin-manifest": "^4.2.0",
     "gatsby-plugin-netlify-cms": "^6.2.0",
@@ -41,6 +42,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^8.32.2",
+    "react-locomotive-scroll": "^0.2.0",
     "react-mailchimp-subscribe": "^2.1.3",
     "styled-components": "^5.3.3",
     "typeface-merriweather": "1.1.13",
