--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -60,7 +60,7 @@ collections:
       - { label: "Portrait", name: "portrait", widget: "image", required: true }
       # - { label: "Brief Description (160 char limit)", name: "description", widget: "string", required: true }
       - { label: "Bio", name: "body", widget: "markdown", required: true }
-      - { label: "Email Address", name: "email", widget: "string", required: true }
+      - { label: "Email Address", name: "email", widget: "string", required: false }
 
   - name: "facultyInstructor"
     identifier_field: facultyInstructor
@@ -79,7 +79,7 @@ collections:
       - { label: "Portrait", name: "portrait", widget: "image", required: true }
       # - { label: "Brief Description (160 char limit)", name: "description", widget: "string", required: true }
       - { label: "Bio", name: "body", widget: "markdown", required: true }
-      - { label: "Email Address", name: "email", widget: "string", required: true }
+      - { label: "Email Address", name: "email", widget: "string", required: false }
 
   - name: "settings"
     label: "Settings"
