--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -99,6 +99,23 @@ collections:
               - { label: Street2, name: street2, widget: string, required: false}
               - { label: City, name: city, widget: string, required: false } 
 
+  - name: "admissionsPageSettings"
+    label: "Admissions Page Application Deadlines"
+    files:
+      - label: "Admimssions Page Info"
+        name: admissions_deadlines
+        file: site/settings/admissions.json
+        fields:
+          - label: "Terms"
+            name: "list"
+            widget: "list"
+            allow_add: true
+            fields:
+              - { label: Term Title (e.g "Fall Term"), name: "termTitle", widget: string, required: true}
+              - { label: Start Date, name: "startDate", widget: string, required: true}
+              - { label: End Date, name: "endDate", widget: string, required: true }
+              - { label: Application Due Date, name: "info", widget: string, required: true }
+
   - name: "teachingClinicSettings"
     label: "Teaching Clinic Information"
     files:
