--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -39,7 +39,8 @@ collections:
       preview: true
     fields:
       - { label: "Title", name: "title", widget: "string" }
-      - { label: "Date of Event", name: "date", widget: "datetime" }
+      - { label: "Event Link URL", name: "link", widget: "string", required: false }
+      - { label: "Date of Event (LEAVE BLANK FOR TBD)", name: "date", widget: "datetime", required: false}
       - { label: "Host", name: "host", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown" }
 
