updated faculty member order

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -56,9 +56,10 @@ collections:
     editor:
       preview: true
     fields:
+      - { label: "Order of appearance (ex: 1 = first to appear)", name: "ordernumber", widget: "number", min: 1, required: true }
       - { label: "Title", name: "title", widget: "string", required: true  }
       - { label: "Role", name: "role", widget: "string", required: true }
-      - { label: "Portrait", name: "portrait", widget: "image", allow_multiple: false, required: false }
+      - { label: "Portrait (png or jpg only)", name: "portrait", widget: "image", allow_multiple: false, required: false }
       # - { label: "Brief Description (160 char limit)", name: "description", widget: "string", required: true }
       - { label: "Bio", name: "body", widget: "markdown", required: true }
       - { label: "Email Address", name: "email", widget: "string", required: false }
@@ -75,9 +76,10 @@ collections:
     editor:
       preview: true
     fields:
+      - { label: "Order of appearance", name: "ordernumber", widget: "number", min: 1, required: true }
       - { label: "Title", name: "title", widget: "string", required: true  }
       - { label: "Role", name: "role", widget: "string", required: true, default: "Instructor" }
-      - { label: "Portrait", name: "portrait", widget: "image", allow_multiple: false, required: false}
+      - { label: "Portrait (png or jpg only)", name: "portrait", widget: "image", allow_multiple: false, required: false}
       # - { label: "Brief Description (160 char limit)", name: "description", widget: "string", required: true }
       - { label: "Bio", name: "body", widget: "markdown", required: true }
       - { label: "Email Address", name: "email", widget: "string", required: false }
