--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -69,6 +69,32 @@ collections:
       - { label: "Image", name: "thumbnail", widget: "image", required: false }
       - { label: "Body", name: "body", widget: "markdown" }
 
+  - name: "careers"
+    label: "Job Board (Careers)"
+    folder: "content/careers"
+    create: true
+    slug: "careers"
+    media_folder: ""
+    public_folder: ""
+    path: "{{title}}/index"
+    editor:
+      preview: true
+    fields:
+      - { label: "Job Title", name: "title", widget: "string", required: true }
+      - {
+          label: "Short Description",
+          name: "shortDescription",
+          widget: "string",
+        }
+      - { label: "Publish Date", name: "date", widget: "date", required: true }
+      - {
+          label: "Body",
+          name: "body",
+          widget: "markdown",
+          required: true,
+          buttons: ["bold", "italic", "heading-three", "bulleted-list", "link"],
+        }
+
   - name: "alumni"
     identifier_field: name
     label: "Alumni"
