--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.9.0",
     "babel-plugin-styled-components": "^1.13.3",
     "embla-carousel": "^6.0.1",
     "embla-carousel-react": "^6.0.1",
