--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,8 +2,8 @@ backend:
   name: git-gateway
   branch: master # Branch to update (optional; defaults to master)
 
-media_folder: static/img # Was static/img
-public_folder: /img # Was img
+media_folder: '' # Was static/img
+public_folder: '' # Was img
 publish_mode: editorial_workflow
 
 collections:
